--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
   </p>
 </div>
 
-    <script src="./script/script.js"></script>
+    <script src="script/script.js"></script>
     
 </body>
+
 </html>
